syntax = "proto3";

package tstr.common.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Test {
  message RunConfig {
    string container_image = 2; // required
    string command = 3;
    repeated string args = 4;
    map<string, string> env = 5;
    google.protobuf.Duration timeout = 6;
  }
  message Matrix {
    message LabelValues {
      repeated string values = 1;
    }
    map<string, LabelValues> labels = 1;
  }

  string id = 1; // required (generated)
  string name = 2; // required
  RunConfig run_config = 3; // required
  map<string, string> labels = 4;
  string cron_schedule = 5;
  google.protobuf.Timestamp next_run_at = 6;
  Matrix matrix = 7;

  google.protobuf.Timestamp registered_at = 10; // required
  google.protobuf.Timestamp updated_at = 11; // required
}

message TestSuite {
  string id = 1; // required (generated)
  string name = 2;
  map<string, string> labels = 3;

  google.protobuf.Timestamp created_at = 10; // required
  google.protobuf.Timestamp updated_at = 11; // required
}

message Run {
  enum Result {
    UNKNOWN = 0;
    PASS = 1;
    FAIL = 2;
    ERROR = 3;
  }

  message Log {
    enum Output {
      UNKNOWN = 0;
      STDOUT = 1;
      STDERR = 2;
      TSTR = 3;
    }

    string time = 1; // required
    Output output_type = 2; // required
    bytes data = 3; // required
  }

  string id = 1;  // required (generated)
  string test_id = 2; // required
  Test.RunConfig test_run_config = 3; // required
  string runner_id = 4;
  Result result = 5;
  repeated Log logs = 6;
  map <string,string> result_data = 7;

  google.protobuf.Timestamp scheduled_at = 10; // required
  google.protobuf.Timestamp started_at = 11;
  google.protobuf.Timestamp finished_at = 12;

}

message Runner {
  string id = 1; // required (generated)
  string name = 2; // required
  map<string, string> accept_test_label_selectors = 3;
  map<string, string> reject_test_label_selectors = 4;

  google.protobuf.Timestamp registered_at = 10; // required
  google.protobuf.Timestamp last_heartbeat_at = 11;
}

message AccessToken {
  enum Scope {
    UNKNOWN = 0;
    ADMIN = 1;
    CONTROL_R = 2;
    CONTROL_RW = 3;
    RUNNER = 4;
    DATA = 5;
  }

  string id = 1; // required (generated)
  string name = 2; // required
  string token = 3; // required (generated) will be present only on issuance, empty otherwise
  repeated Scope scopes = 4; // required

  google.protobuf.Timestamp issued_at = 10; // required
  google.protobuf.Timestamp expires_at = 11;
  google.protobuf.Timestamp revoked_at = 12;
}
